<resources>
    <string name="back">Atrás</string>
    <string name="next">Siguiente</string>
    <string name="cancel">Cancelar</string>
    <string name="app_name">My Application</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="Welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Login">Iniciar Sesión</string>
    <string name="SignUp">Registrarse</string>
    <string name="LogOut">CERRAR SESIÓN</string>
    <string name="changeLanguage">Inglés</string>
    <string name="inventary">Inventario</string>
    <string name="pedidosA">Pedidos Activos</string>
    <string name="Historial">HISTORIAL DE PEDIDOS</string>
    <string name="HistorialP">HISTORIAL DE PRODUCTOS</string>
    <string name="Reportes">REPORTES</string>
    <string name="cSesion">CERRAR SESIÓN</string>
    <string name="adminMessage">Administrador</string>
    <string name="mostradorMessage">Mostrador</string>
    <string name="iSesion">Inicio Sesión</string>
    <string name="iSesionEmail">Correo Electronico:</string>
    <string name="iSesionICorreo">Introducir correo</string>
    <string name="iSesionPassword">Contraseña:</string>
    <string name="iSesionIPassword">Introducir contraseña</string>
    <string name="cContraseña">Confirmar contraseña:</string>
    <string name="Registro">REGISTRO</string>
    <string name="MyGroupText">Mi grupo: </string>
    <string name="nullRole">No tienes un rol asignado.</string>

</resources>