<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo2_light"
    tools:context=".inicioSesion">

    <Button
        android:id="@+id/buttonNext3"
        android:layout_width="133dp"
        android:layout_height="48dp"
        android:layout_marginStart="42dp"

        android:layout_marginTop="552dp"
        android:layout_marginEnd="236dp"
        android:backgroundTint="#4C3C1F"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/back"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/buttonNext2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/iSesionEmail"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/editEmailAddress2"
        app:layout_constraintEnd_toEndOf="@+id/editEmailAddress2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editEmailAddress2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="316dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:hint="@string/iSesionICorreo"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.896"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/iSesionPassword"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/editPassword2"
        app:layout_constraintEnd_toEndOf="@+id/editPassword2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="408dp"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:hint="@string/iSesionIPassword"
        android:inputType="textPassword"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/buttonNext2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/buttonNext2"
        android:layout_width="133dp"
        android:layout_height="48dp"
        android:layout_marginStart="242dp"
        android:layout_marginTop="536dp"
        android:layout_marginEnd="56dp"
        android:backgroundTint="#E2B456"
        android:fontFamily="sans-serif-smallcaps"
        android:text="Siguiente"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.114"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="269dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="211dp"
        android:layout_marginBottom="27dp"
        android:backgroundTint="#FEFEFE"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/iSesion"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>